# strategy_pattern

./: .gitmodules  CMakeLists.txt  README.md  concreteStrategyA.cpp  concreteStrategyA.h  concreteStrategyB.cpp  concreteStrategyB.h  context.cpp  context.h  strategy.cpp  strategy.h  test_strategy.cpp  test_strategy.h
